trying to fix the color contrast issue

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -13,12 +13,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 body {
     font-family: var(--body-font);
     color: var(--accent2-color);
+    background-color: #d3d3d3;
 }
 
 header,
